# TicTacTue

./: CMakeLists.txt  TicTacTue.qmlproject  TicTacTue.qmlproject.qtds  qds.cmake
App/autogen/: environment.h
TicTacTue/: CMakeLists.txt  Constants.qml  qmldir
TicTacTue/designer/: plugin.metainfo
TicTacTueContent/: App.qml  CMakeLists.txt  GameScreen.qml  GeneralButton.ui.qml  GeneralTextInput.ui.qml  MainScreen.qml  PlayerStats.ui.qml  PlayerTimeScore.qml  XORect.ui.qml
TicTacTueCore/: CMakeLists.txt  aigame.cpp  aigame.h  board.cpp  board.h  countdowntimer.cpp  countdowntimer.h  game.cpp  game.h  gameclient.cpp  gameclient.h  offlinegame.cpp  offlinegame.h  onlinegame.cpp  onlinegame.h  player.cpp  player.h  tictactueai.cpp  tictactueai.h  tictactuecore.cpp  tictactuecore.h
TicTacTueCore_mock/TicTacTueCore/: TicTacTueCore.qml  qmldir
